@@ -131,10 +131,10 @@
                         <DynamicImport-Package>
                             org.apache.felix.bundlerepository;version="[2.0,3)",
                             org.osgi.service.obr;version="[1.0,2)",
-                            org.osgi.service.cm;version="[1.2,2)",
+                            org.osgi.service.cm;version="[1.5,2)",
                             org.osgi.service.condpermadmin;version="[1.0,2)",
                             org.osgi.service.log;version="[1.3,2)",
-                            org.osgi.service.metatype;version="[1.1,2)",
+                            org.osgi.service.metatype;version="[1.4,2)",
                             org.osgi.service.permissionadmin;version="[1.2,2)",
                             org.osgi.service.prefs;version="[1.1,2)",
                             org.osgi.service.wireadmin;version="[1.0,2)"
